# hubris

./: Cargo.toml
app/ast1060-mctp-pldm/: Cargo.toml  app.toml
app/ast1060-starter/: app.toml
idl/: bad.firmware-device.idol  firmware-ops.idol  fw-device.idol
task/firmware-device-api/: Cargo.toml  build.rs
task/firmware-device-api/src/: lib.rs
task/fw-device/: Cargo.toml  build.rs
task/fw-device-api/: Cargo.toml  build.rs
task/fw-device-api/src/: lib.rs
task/fw-device/src/: main.rs
task/pldm-responder/: Cargo.toml  build.rs
task/pldm-responder/src/: main.rs
