[package]
name = "firmware-device-api"
version = "0.1.0"
edition = "2021"

[dependencies]
userlib = { path = "../../sys/userlib", features = ["panic-messages"] }
pldm-lib = { path = "../../../pldm-lib" }
pldm-common = { path = "../../../pldm-lib/pldm-common" }
zerocopy.workspace = true
zerocopy-derive.workspace = true
num-traits.workspace = true
idol-runtime = { workspace = true }
counters = { path = "../../lib/counters" }
derive-idol-err = { path = "../../lib/derive-idol-err" }

[build-dependencies]
idol = { workspace = true }

[lib]
test = false
doctest = false
bench = false