[package]
name = "fw-device"
version = "0.1.0"
edition = "2021"

[dependencies]
userlib = { path = "../../sys/userlib", features = ["panic-messages"] }
idol-runtime = { workspace = true }
pldm-lib = { path = "../../../pldm-lib" }
pldm-common = { path = "../../../pldm-lib/pldm-common" }
zerocopy = { workspace = true }
zerocopy-derive = { workspace = true }
counters = { path = "../../lib/counters" }
num-traits = { workspace = true, default-features = false }
derive-idol-err = { path = "../../lib/derive-idol-err" }

[build-dependencies]
idol = { workspace = true }

# This section is here to discourage RLS/rust-analyzer from doing test builds,
# since test builds don't work for cross compilation.
[[bin]]
name = "fw-device"
test = false
doctest = false
bench = false

[lints]
workspace = true
